--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,13 @@
     <modules>
         <module>marcopolo-logger</module>
         <module>marcopolo-common</module>
+        <module>marcopolo-data</module>
     </modules>
 
     <properties>
         <junit.version>4.11</junit.version>
+        <log4j2.version>2.3</log4j2.version>
+        <slf4j.version>1.6.6</slf4j.version>
         <!--todo-->
     </properties>
 
