--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <properties>
         <junit.version>4.11</junit.version>
-        <log4j2.version>2.3</log4j2.version>
+        <log4j2.version>2.11.0</log4j2.version>
         <slf4j.version>1.6.6</slf4j.version>
         <!--todo-->
     </properties>
@@ -27,6 +27,14 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--todo-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies -->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-dependencies</artifactId>-->
+            <!--<version>2.1.6.RELEASE</version>-->
+            <!--<type>pom</type>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+
     </dependencies>
 </project>
