--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 .gitignore
 marcopolo-logger/*.iml
 marcopolo-common/*.iml
+marcopolo-search/marcopolo-search.iml
+marcopolo-collect/marcopolo-collect.iml
 marcopolo-data/marcopolo-data.iml
 marcopolo-web/marcopolo-web.iml
 marcopolo-web/.mvn/*
