--- a/marcopolo-data/pom.xml
+++ b/marcopolo-data/pom.xml
@@ -32,6 +32,16 @@
             <artifactId>marcopolo-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.mybatis.spring.boot</groupId>-->
+            <!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
+            <!--<version>1.3.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>mysql</groupId>-->
+            <!--<artifactId>mysql-connector-java</artifactId>-->
+            <!--<version>5.1.42</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
