--- a/marcopolo-web/src/main/resources/application.properties
+++ b/marcopolo-web/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port=8080
+
+mybatis.config-locations=classpath:mybatis-config.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.travelsky.openbs.entity
+
+#============== datasource =================
+#spring.datasource.driverClassName = com.mysql.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://192.168.128.138:3306/poseidon?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.username = root
+#spring.datasource.password = root
