--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <junit.version>4.11</junit.version>
         <log4j2.version>2.11.0</log4j2.version>
         <slf4j.version>1.6.6</slf4j.version>
+        <mybatis.spring.version>1.3.1</mybatis.spring.version>
+        <mybatis.version>3.4.1</mybatis.version>
         <!--todo-->
     </properties>
 
