--- a/marcopolo-search/pom.xml
+++ b/marcopolo-search/pom.xml
@@ -24,34 +24,24 @@
     <dependencies>
         <dependency>
             <groupId>com.feecn</groupId>
-            <artifactId>marcopolo-logger</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.feecn</groupId>
-            <artifactId>marcopolo-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.feecn</groupId>
             <artifactId>marcopolo-data</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>transport</artifactId>
-            <version>6.2.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.elasticsearch.plugin</groupId>
-            <artifactId>transport-netty4-client</artifactId>
-            <version>6.2.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.elasticsearch</groupId>
-            <artifactId>elasticsearch</artifactId>
-            <version>6.2.4</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.elasticsearch.client</groupId>-->
+        <!--<artifactId>transport</artifactId>-->
+        <!--<version>6.2.4</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.elasticsearch.plugin</groupId>-->
+        <!--<artifactId>transport-netty4-client</artifactId>-->
+        <!--<version>6.2.4</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.elasticsearch</groupId>-->
+        <!--<artifactId>elasticsearch</artifactId>-->
+        <!--<version>6.2.4</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
