--- a/marcopolo-web/src/main/resources/application.properties
+++ b/marcopolo-web/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8080
-
-mybatis.config-locations=classpath:mybatis-config.xml
-mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.travelsky.openbs.entity
-
-#============== datasource =================
-#spring.datasource.driverClassName = com.mysql.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://192.168.128.138:3306/poseidon?useUnicode=true&characterEncoding=utf-8
-#spring.datasource.username = root
-#spring.datasource.password = root
+#datasource
+spring.datasource.url=jdbc:postgresql://10.221.3.69:5433/postgres?searchpath=public
+spring.datasource.username=osetest
+spring.datasource.password=Os123456
+spring.datasource.driverClassName=org.postgresql.Driver
+#jpa
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false  
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
