--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
         <slf4j.version>1.6.6</slf4j.version>
         <mybatis.spring.version>1.3.1</mybatis.spring.version>
         <mybatis.version>3.4.1</mybatis.version>
+        <elasticsearch.version>6.2.4</elasticsearch.version>
+        <fastjson.version>1.2.46</fastjson.version>
+        <postgresql.version>9.4.1209</postgresql.version>
         <!--todo-->
     </properties>
 
