--- a/marcopolo-collect/pom.xml
+++ b/marcopolo-collect/pom.xml
@@ -23,10 +23,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
+            <groupId>com.feecn</groupId>
+            <artifactId>marcopolo-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.feecn</groupId>
+            <artifactId>marcopolo-search</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.feecn</groupId>
+            <artifactId>marcopolo-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
